Wrong comment syntax...

--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -8,7 +8,7 @@ FROM tamboraorg/crenginx:2010.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 # version: yyyy.n for stable versions / 0.yyyy for development
-//ENV CRE_VERSION 0.2010  
+## ENV CRE_VERSION 0.2010  
 
 
 
