--- a/creGlue/Dockerfile
+++ b/creGlue/Dockerfile
@@ -17,7 +17,7 @@ ENV DOCKER_HOST unix:///tmp/docker.sock
 # Install docker-gen (generates files from templates with docker data filled in)
 RUN wget https://github.com/jwilder/docker-gen/releases/download/$DOCKER_GEN_VERSION/docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz \
  && tar -C /usr/local/bin -xvzf docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz \
- && rm /docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz
+ && rm docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \
     echo "$(date +'%F %R') \t  docker-gen \t $(docker-gen -version)" >> /cre/versions.txt 
