--- a/creGlue/hooks/build
+++ b/creGlue/hooks/build
@@ -3,5 +3,5 @@
 #https://medium.com/microscaling-systems/labelling-automated-builds-on-docker-hub-f3d073fb8e1
 
 # $IMAGE_NAME var is injected into the build so the tag is correct. 
-docker build --build-arg BUILD_DATE=`date -u +%Y-%m-%dT%H:%M:%SZ` -t $IMAGE_NAME .
+docker build --build-arg BUILD_YEAR=`date -u +%Y` --build-arg BUILD_MONTH=`date -u +%m` -t $IMAGE_NAME .
 
