--- a/crePostgres/hooks/build
+++ b/crePostgres/hooks/build
@@ -3,7 +3,5 @@
 #https://medium.com/microscaling-systems/labelling-automated-builds-on-docker-hub-f3d073fb8e1
 
 # $IMAGE_NAME var is injected into the build so the tag is correct. 
-docker build --build-arg VCS_REF=`git rev-parse — short HEAD` \
-  --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
-  -t $IMAGE_NAME .
+docker build --build-arg BUILD_YEAR=`date -u +%Y` --build-arg BUILD_MONTH=`date -u +%m` -f $DOCKERFILE_PATH -t $IMAGE_NAME .
 
