Update to new standard

--- a/crePhpDev/Dockerfile
+++ b/crePhpDev/Dockerfile
@@ -5,12 +5,21 @@
 #
 
 # Pull base image.
-FROM tamboraorg/crephp:2010.0
+FROM tamboraorg/crephp:2011.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de> 
+
+ARG BUILD_YEAR=2011
+ARG BUILD_MONTH=0
 
 # Fixes some weird terminal issues such as broken clear / CTRL+L
 ENV TERM=linux
 
+LABEL Name="Php Dev for CRE" \
+      Year=$BUILD_YEAR \
+      Month=$BUILD_MONTH \
+      Version=$PHP_VERSION \
+      OS="Ubuntu:$UBUNTU_VERSION" \
+      Build_=$CRE_VERSION 
 
 # Install selected debug extensions and other stuff
 RUN apt-get update \
@@ -22,6 +31,8 @@ RUN apt-get update \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/* ~/.composer
+
+COPY cre /cre
 
 VOLUME ["/cre/www"]
 WORKDIR "/cre/www"
