--- a/crePhp/docker-compose.test.yml
+++ b/crePhp/docker-compose.test.yml
@@ -1,8 +1,8 @@
 sut:
   build: .
-  command: ./tests/php-test.sh
+  command: /cre/tests/php-test.sh
   volumes:
-    - /tests/www:/cre/www
+    - /tests:/cre/tests
   
 
 
