--- a/crePostgresCitus/docker-compose.test.yml
+++ b/crePostgresCitus/docker-compose.test.yml
@@ -1,5 +1,6 @@
 sut:
   build: .
-  command: /cre/postgres-citus-test.sh
-
+  command: /cre/tests/postgres-citus-test.sh
+  volumes:
+    - ./tests:/cre/tests
 
