Move volume definition

--- a/creMysql/Dockerfile
+++ b/creMysql/Dockerfile
@@ -22,6 +22,8 @@ LABEL Name="MySql for CRE" \
 RUN echo "mysql-server mysql-server/root_password password root" | debconf-set-selections
 RUN echo "mysql-server mysql-server/root_password_again password root" | debconf-set-selections
 
+VOLUME /var/lib/mysql
+
 RUN apt-get update && \
 	apt-get -y install mysql-server-$MYSQL_VERSION && \
 	mkdir -p /var/lib/mysql && \
@@ -44,7 +46,7 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 COPY cre /cre
 WORKDIR /cre/
 
-VOLUME /var/lib/mysql
+##VOLUME /var/lib/mysql
 
 ENTRYPOINT ["/cre/mysql-entrypoint.sh"]
 
