--- a/crePostgresCitus/Dockerfile
+++ b/crePostgresCitus/Dockerfile
@@ -24,6 +24,7 @@ LABEL Name="Postgres Citus for CRE" \
 USER root
 
 RUN curl https://install.citusdata.com/community/deb.sh | bash
+RUN apt update
 RUN apt-get -y install postgresql-${POSTGRES_VERSION}-citus
 RUN pg_conftool ${POSTGRES_VERSION} main set shared_preload_libraries citus
 
