--- a/crePhpYii3/docker-compose.test.yml
+++ b/crePhpYii3/docker-compose.test.yml
@@ -1,6 +1,7 @@
 sut:
   build: .
-  command: /cre/test/php-dev-test.sh
+  command: /cre/tests/php-yii3-test.sh
   volumes:
     - ./tests:/cre/tests
+
 
