Remove comment in middle of line

--- a/crePhpYii3/Dockerfile
+++ b/crePhpYii3/Dockerfile
@@ -1,5 +1,5 @@
 # Adapted from 
-FROM tamboraorg/crephpdev:2012.0 #needs 7.1 at least....
+FROM tamboraorg/crephpdev:2012.0 
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 ENV DEBIAN_FRONTEND noninteractive
