--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -29,14 +29,8 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 
 COPY cre /cre
 
-# mkdir -p /cre/tmp/yii && 
-##RUN composer create-project --prefer-dist yiisoft/yii2-app-basic /cre/tmp/yii 
-# move to www in entry-point
-
-#config/web.php
-
-##VOLUME ["/cre/www/yii"]
-WORKDIR "/cre/dev/cre-vue"
+##VOLUME ["/cre/vue-components" "/cre/web-components"]
+WORKDIR "/cre/dev"
 
 ENTRYPOINT ["/cre/vue-entrypoint-cli.sh"]
 
