--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -32,6 +32,15 @@ COPY cre /cre
 ##VOLUME ["/cre/vue-components" "/cre/web-components"]
 WORKDIR "/cre/dev"
 
+# can be used to update node
+RUN npm install -g n 
+RUN n stable # update node
+
+# -g needed; https://www.npmjs.com/package/npm-add-script
+RUN npm install -g npm-add-script  
+RUN npm install -g vue-template-compiler @vue/cli @vue/cli-service    
+RUN npm install -g --save-dev @vue/cli-plugin-babel @vue/cli-plugin-eslint
+
 ENTRYPOINT ["/cre/vue-entrypoint.sh"]
 
 # Open up fcgi port 
