Move npm global into Dockerfile

--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -32,6 +32,10 @@ COPY cre /cre
 ##VOLUME ["/cre/vue-components" "/cre/web-components"]
 WORKDIR "/cre/dev"
 
+# https://medium.com/@aguidrevitch/when-installation-of-global-package-using-npm-inside-docker-fails-b551b5dda389
+# Dockerfile sometimes run npm as nobody.
+##RUN npm -g config set user root
+
 # can be used to update node
 RUN npm install -g n 
 RUN n stable # update node
