--- a/creMobile/Dockerfile
+++ b/creMobile/Dockerfile
@@ -22,6 +22,18 @@ LABEL Name="Mobile for CRE" \
 ##    apt-get install -y nodejs 
 #RUN apt-get update && apt-get install npm && apt-get clean ## included in nodejs
 
+# https://medium.com/@aguidrevitch/when-installation-of-global-package-using-npm-inside-docker-fails-b551b5dda389
+# Dockerfile sometimes run npm as nobody.
+##RUN npm -g config set user root
+
+RUN npm install -g --unsafe expo-cli
+RUN npm install -g react-native 
+## npm install nodejs-mobile-react-native --save
+RUN npm install -g react-native-cli
+RUN npm install -g create-react-native-app 
+RUN npm install -g vue-native-cli
+## npm install -g yarn
+
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
     echo "$(date +'%F %R') \t creMobile \t ${MOBILE_VERSION}" >> /cre/versions.txt  
 
