--- a/creMobile/Dockerfile
+++ b/creMobile/Dockerfile
@@ -26,17 +26,19 @@ LABEL Name="Mobile for CRE" \
 # Dockerfile sometimes run npm as nobody.
 ##RUN npm -g config set user root
 
+
 RUN npm install -g --unsafe expo-cli
-RUN npm install -g react-native 
+RUN npm install -g react react-native react-native-cli
 ## npm install nodejs-mobile-react-native --save
-RUN npm install -g react-native-cli
 RUN npm install -g create-react-native-app 
 RUN npm install -g vue-native-cli
 ## npm install -g yarn
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
-    echo "$(date +'%F %R') \t creMobile \t ${MOBILE_VERSION}" >> /cre/versions.txt  
-
+    echo "$(date +'%F %R') \t creMobile \t ${MOBILE_VERSION}" >> /cre/versions.txt && \
+    echo "$(date +'%F %R') \t  expo \t ${expo --version}" >> /cre/versions.txt && \
+    echo "$(date +'%F %R') \t  expo \t ${vue-native --version}" >> /cre/versions.txt && \
+    echo "$(date +'%F %R') \t  expo \t ${react-native --version  | grep react-native-cli}" >> /cre/versions.txt 
 
 COPY cre /cre
 
