Remove exim call

--- a/creExim/Dockerfile
+++ b/creExim/Dockerfile
@@ -28,8 +28,9 @@ RUN set -ex; \
     apt-get clean
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \
-    echo "$(date +'%F %R') \t crePhp \t $EXIM_VERSION " >> /cre/versions.txt && \
-    echo "$(date +'%F %R') \t  $(exim -v)" >> /cre/versions.txt 
+    echo "$(date +'%F %R') \t crePhp \t $EXIM_VERSION " >> /cre/versions.txt 
+## && \
+## echo "$(date +'%F %R') \t  $(exim -v)" >> /cre/versions.txt 
 
 # File permissions workaround
 # RUN usermod -u 1000 www-data
@@ -44,6 +45,5 @@ VOLUME ["/cre/mail"]
 WORKDIR "/cre/mail"
 
 # Define default command.
-#CMD /cre/php-fpm.sh
 ENTRYPOINT ["/cre/exim-entrypoint.sh"]
 CMD ["shoreman", "/cre/exim-procfile"]
