--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -49,6 +49,7 @@ RUN vue create -d -f cre-components
 RUN cd /cre/dev/cre-components
 ##RUN npm version "${CRE_VERSION}.0"  ## DOES NOT WORK
 RUN npm install --save vue vuex
+RUN npm install --save ucid
 RUN npm install --save-dev @vue/web-component-wrapper 
 RUN npm install --save-dev @babel/plugin-transform-runtime
 RUN npm install --save @babel/runtime
