--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -21,13 +21,6 @@ COPY cre /cre
 
 ##VOLUME ["/cre/vue-components" "/cre/web-components"]
 
-RUN npm set init.version "${CRE_VERSION}.0" 
-RUN npm set init.license "Apache-2.0" 
-# npm set init.author.email "example-user@example.com" 
-# npm set init.author.name "example_user" 
-# npm config set init.author.url http://iamsim.me/ 
-# https://docs.npmjs.com/creating-a-package-json-file#default-values-extracted-from-the-current-directory 
-
 
 RUN npm install -g typescript ajv webpack 
 #RUN npm install -g core-js@3 #or 2
@@ -42,11 +35,11 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
     echo "$(date +'%F %R') \t  typescript \t $(tsc -v)" >> /cre/versions.txt 
 
 ## FROM entrypoint
-RUN mkdir -p /cre/dev/cre-components
-RUN cd /cre/dev
+RUN mkdir -p /cre/node/cre-components
+RUN cd /cre/node
 
 RUN vue create -d -f cre-components
-RUN cd /cre/dev/cre-components
+RUN cd /cre/node/cre-components
 ##RUN npm version "${CRE_VERSION}.0"  ## DOES NOT WORK
 RUN npm install --save vue vuex
 RUN npm install --save ucid
@@ -58,7 +51,7 @@ RUN npm install --save core-js@2
 #RUN npm install --save babel-polyfill
 RUN npm-install-peers
 ##
-WORKDIR "/cre/dev/cre-components"
+WORKDIR "/cre/node/cre-components"
 
 ENTRYPOINT ["/cre/vue-entrypoint.sh"]
 
