Add possibility to patch file

--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -40,7 +40,6 @@ RUN cd /cre/node
 
 RUN vue create -d -f cre-components
 RUN cd /cre/node/cre-components
-##RUN npm version "${CRE_VERSION}.0"  ## DOES NOT WORK
 RUN npm install --save vue vuex
 RUN npm install --save ucid
 RUN npm install --save-dev @vue/web-component-wrapper 
@@ -52,6 +51,11 @@ RUN npm install --save core-js@2
 RUN npm-install-peers
 ##
 WORKDIR "/cre/node/cre-components"
+
+## init once ??
+##vue-cli-service build  --report --target wc-async --name $crazy_kebab 'src/components/*.vue'
+## patch 
+RUN /cre/patch-vue-components-file.sh
 
 ENTRYPOINT ["/cre/vue-entrypoint.sh"]
 
